Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2006-12-02 Takashi
 BUG: [ 1589324 ] WinMegee crashes on copy
  Src: FileFilterMgr.cpp

2006-12-02 Takashi
 BUG: [ 1603077 ] Doesn't filter the file vc60.idb using "Merge_VC_loose.flt"
  Filters: Merge_VC_loose.flt

2006-12-02 Takashi
 BUG: [ 1603061 ] "Copy Left/Right To .." doesn't work correctly
  Src: DirActions.cpp

2006-11-30 Kimmo
 PATCH: [ 1605682 ] Add Syntax Highlight option to config log
  Src: ConfigLog.cpp ConfigLog.h MainFrm.cpp

2006-11-30 Takashi
 BUG: [ 1603230 ] DirView icons isn't shown correctly on NT4.0
  Src/res: equalfile.ico fileskip.ico lfile.ico notequalfile.ico rfile.ico

2006-11-28 Kimmo
 PATCH: [ 1603196 ] Allow Open-dialog kind of folder selection for project files
  Src: FileOrFolderSelect.cpp FileOrFolderSelect.h OpenDlg.cpp OpenDlg.h
 PATCH: [ 1604078 ] Hide skipped items by default
  Src: OptionsInit.cpp

2006-11-27 Gal
 BUG: [ 1603562 ] Location pane's bar outlines
  Src: LocationView.cpp

2006-11-26 Kimmo
 PATCH: [ 1602365 ] Move SelectFile and SelectFolder routines to separate file
  Src: DirActions.cpp DirCmpReportDlg.cpp FileFiltersDlg.cpp MainFrm.cpp Merge.cpp
   Merge.dsp Merge.h MergeDoc.cpp OpenDlg.cpp PatchDlg.cpp ProjectFilePathsDlg.cpp
   PropRegistry.cpp PropVss.cpp
  Src/Common: PreferencesDlg.cpp
  Src new files: FileOrFolderSelect.cpp FileOrFolderSelect.h

2006-11-25 Kimmo
 PATCH: [ 1596692 ] Change the way modified docs are saved to fix several issues
  Src: MainFrm.cpp MergeDiffDetailView.cpp MergeDoc.cpp MergeDoc.h

2006-11-21 Kimmo
 PATCH: [ 1589563 ] Fix crash with weird filetimes (and cleanup the code)
  Src: DiffFileInfo.cpp DiffFileInfo.h DirScan.cpp DirViewColHandler.cpp
   FileInfo.cpp FileInfo.h

2006-11-19 Gal
 PATCH: [ 1590831 ] Handle minimize argument (Bug 1570351)
  Src/Common: SplitterWndEx.cpp
  Src: Merge.cpp MergeArgs.cpp MergeDiffDetailView.cpp

2006-11-13 Gal