@@ -2,9 +2,13 @@ Src\Changes.txt
 Add new items to top.
 (This summarizes all changes to all files under Src, including Src\Languages.)
 
+2006-12-03 Kimmo
+ PATCH: [ 1607343 ] Fix filefilter regexp uppercasing for 2.6 branch
+  Src: FileFilterMgr.cpp
+
 2006-12-02 Takashi
  BUG: [ 1589324 ] WinMegee crashes on copy
-  Src: FileFilterMgr.cpp
+  Src: Common/CShellFileOp.cpp
 
 2006-12-02 Takashi
  BUG: [ 1603077 ] Doesn't filter the file vc60.idb using "Merge_VC_loose.flt"
